--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 <!-- Gives us the meat and potatoes of our webpage, starting with a header -->
 <body>
   <h1>How to make the best Bison Meatballs of all time!</h1>
+
+
+      <image src="./images/bison_meat.jpg" width="600px" height="400px">
   
 </body>
   <p>
