--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     body
     {
       background-color: tomato;
-      font-family: 'Brush Script MT', 'Optima', sans-serif;
+      font-family: 'Optima', sans-serif;
       font-size: 16px;
     }
     
