--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     body
     {
       background-color: tomato;
-      font-family: 'Optima', sans-serif;
-      font-size: 16px;
+      font-family: 'Times New Roman', sans-serif;
+      font-size: 20px;
     }
     
     h1
