--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     body
     {
       background-color: tomato;
-      font-family: 'Times New Roman', sans-serif;
+      font-family: Times New Roman;
       font-size: 20px;
     }
     
