--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- Gives us the meat and potatoes of our webpage, starting with a header -->
 <body>
   <h1>How to make the best Bison Meatballs of all time!</h1>
-  <image src="./images/bison_meat.jpg" width="500px" height="400px">
+  <image src="./images/shocked-bison.jpg" width="500px" height="400px">
   
 </body>
   <p>
@@ -81,6 +81,16 @@
   <br>
   <h2>Instructions:</h2>
   <o1>
-    
+    <li>Preheat your oven to 375°F (190°C) and line a baking sheet with parchment paper.</li>
+    <li>In a large mixing bowl, combine the ground bison meat, breadcrumbs, grated Parmesan cheese, chopped onion, minced garlic, milk, egg, 
+        salt, black pepper, dried oregano, dried basil, and red pepper flakes (if using). Mix everything together until well combined.</li>
+    <li>Take small portions of the mixture and roll them into meatballs. The size is up to your preference, but typically, they are about 1 to 1.5 inches in diameter.</li>
+    <li>Heat a skillet or frying pan over medium-high heat and add a little olive oil to coat the bottom of the pan.</li>
+    <li>Place the meatballs in the hot skillet, making sure not to overcrowd them. You may need to cook them in batches if your pan is not large enough.</li>
+    <li>Brown the meatballs on all sides, turning them as needed. This should take about 4-5 minutes.</li>
+    <li>Once the meatballs are nicely browned, transfer them to the prepared baking sheet.</li>
+    <li>Bake the meatballs in the preheated oven for about 10-15 minutes or until they are cooked through.</li>
+    <li>Bison meat is lean, so be careful not to overcook them to prevent them from becoming dry.</li>
+    <li>Serve the bison meatballs with your favorite sauce or pasta, or use them as appetizers.</li>
   </o1>
 </html>
