--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
   <o1>
     <li>Preheat your oven to 375°F (190°C) and line a baking sheet with parchment paper.</li>
     <li>In a large mixing bowl, combine the ground bison meat, breadcrumbs, grated Parmesan cheese, chopped onion, minced garlic, milk, egg, 
-              salt, black pepper, dried oregano, dried basil, and red pepper flakes (if using). Mix everything together until well combined.</li>
+        salt, black pepper, dried oregano, dried basil, and red pepper flakes (if using).</li> 
+    <li>Mix everything together until well combined.</li>
     <li>Take small portions of the mixture and roll them into meatballs. The size is up to your preference, but typically, they are about 1 to 1.5 inches in diameter.</li>
     <li>Heat a skillet or frying pan over medium-high heat and add a little olive oil to coat the bottom of the pan.</li>
     <li>Place the meatballs in the hot skillet, making sure not to overcrowd them. You may need to cook them in batches if your pan is not large enough.</li>
