--- a/index.html
+++ b/index.html
@@ -94,4 +94,6 @@
     <li>Bison meat is lean, so be careful not to overcook them to prevent them from becoming dry.</li>
     <li>Serve the bison meatballs with your favorite sauce or pasta, or use them as appetizers.</li>
   </o1>
+
+  <em><a href="https://www.food.com/recipe/bison-meat-loaf-1-buffalo-355879">If you're more of a meatloaf person, try this!</a></em>
 </html>
