--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
     <li><sup>1</sup>/<sub>4</sub> teaspoon of red pepper flakes (for a little optional heat)</li>
     <li>Olive oil (for frying, use your judgement)</li>
   </u1>
+
+<image src="./images/bison_meat.jpg">
+  
   <br>
   <h2>Instructions:</h2>
   <o1>
@@ -94,6 +97,9 @@
     <li>Bison meat is lean, so be careful not to overcook them to prevent them from becoming dry.</li>
     <li>Serve the bison meatballs with your favorite sauce or pasta, or use them as appetizers.</li>
   </o1>
+  <br>
 
   <em><a href="https://www.food.com/recipe/bison-meat-loaf-1-buffalo-355879">If you're more of a meatloaf person, try this!</a></em>
+
+  
 </html>
