--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         color: PapayaWhip;
         font-size: 50px;
     }
+    h2
+    {
+        color: PapayaWhip;
+        font-size: 30px;
+    
   </style>
 </head>
 
@@ -83,7 +88,8 @@
     <li><sup>1</sup>/<sub>4</sub> teaspoon of red pepper flakes (for a little optional heat)</li>
     <li>Olive oil (for frying, use your judgement)</li>
   </u1>
-
+<p></p>
+<p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
 <image src="./images/bison_meat.jpg">
   
   <br>
@@ -108,5 +114,6 @@
 
 <em><a href="https://www.food.com/recipe/bison-meat-loaf-1-buffalo-355879">If you're more of a meatloaf person, try this!</a></em>
 
+<p></p>
   
 </html>
