--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     <li>1 lb of ground bison meat</li>
     <li><sup>1</sup>/<sub>2</sub> cup of breadcrumbs</li>
     <li><sup>1</sup>/<sub>4</sub> cup of grated parmesan cheese</li>
-    <li><sup>1</sup>/<sub>4</sub> cup of finely chopped onion</li>
+    <li><sup>1</sup>/<sub>4</sub> cup of <i>finely</i> chopped onion</li>
     <li>2 cloves of minced garlic</li>
     <li><sup>1</sup>/<sub>4</sub> cup of milk</li>
-    <li>1 large egg</li>
+    <li>1 <b>large</b> egg</li>
     <li><sup>1</sup>/<sub>2</sub> teaspoon of salt</li>
     <li><sup>1</sup>/<sub>4</sub> teaspoon of black pepper</li>
     <li><sup>1</sup>/<sub>2</sub> teaspoon of dried oregano</li>
@@ -99,9 +99,9 @@
     <li>In a large mixing bowl, combine the ground bison meat, breadcrumbs, grated Parmesan cheese, chopped onion, minced garlic, milk, egg, 
         salt, black pepper, dried oregano, dried basil, and red pepper flakes (if using).</li> 
     <li>Mix everything together until well combined.</li>
-    <li>Take small portions of the mixture and roll them into meatballs. The size is up to your preference, but typically, they are about 1 to 1.5 inches in diameter.</li>
-    <li>Heat a skillet or frying pan over medium-high heat and add a little olive oil to coat the bottom of the pan.</li>
-    <li>Place the meatballs in the hot skillet, making sure not to overcrowd them. You may need to cook them in batches if your pan is not large enough.</li>
+    <li>Take small portions of the mixture and roll them into meatballs. The size is up to your preference, but <i>typically</i>, they are about 1 to 1.5 inches in diameter.</li>
+    <li>Heat a skillet or frying pan over <b>medium-high heat</b> and add a little olive oil to coat the bottom of the pan.</li>
+    <li>Place the meatballs in the hot skillet, making sure not to overcrowd them. You may need to cook them in batches if your pan is<s>inadequate</s> not large enough.</li>
     <li>Brown the meatballs on all sides, turning them as needed. This should take about 4-5 minutes.</li>
     <li>Once the meatballs are nicely browned, transfer them to the prepared baking sheet.</li>
     <li>Bake the meatballs in the preheated oven for about 10-15 minutes or until they are cooked through.</li>
