--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 <!-- Gives us the meat and potatoes of our webpage, starting with a header -->
 <body>
   <h1>How to make the best Bison Meatballs of all time!</h1>
+
+<p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
+  
   <image src="./images/shocked-bison.jpg" width="500px" height="400px">
   
 </body>
@@ -101,12 +104,12 @@
     <li>Mix everything together until well combined.</li>
     <li>Take small portions of the mixture and roll them into meatballs. The size is up to your preference, but <i>typically</i>, they are about 1 to 1.5 inches in diameter.</li>
     <li>Heat a skillet or frying pan over <b>medium-high heat</b> and add a little olive oil to coat the bottom of the pan.</li>
-    <li>Place the meatballs in the hot skillet, making sure not to overcrowd them. You may need to cook them in batches if your pan is<s>inadequate</s> not large enough.</li>
-    <li>Brown the meatballs on all sides, turning them as needed. This should take about 4-5 minutes.</li>
-    <li>Once the meatballs are nicely browned, transfer them to the prepared baking sheet.</li>
+    <li>Place the meatballs in the hot skillet, making sure not to overcrowd them. You may need to cook them in batches if your pan is <s>inadequate</s> not large enough.</li>
+    <li>Brown the meatballs on all sides, turning them as needed. <b>This should take about 4-5 minutes.</b></li>
+    <li>Once the meatballs are <i>nicely</i> browned, transfer them to the prepared baking sheet.</li>
     <li>Bake the meatballs in the preheated oven for about 10-15 minutes or until they are cooked through.</li>
-    <li>Bison meat is lean, so be careful not to overcook them to prevent them from becoming dry.</li>
-    <li>Serve the bison meatballs with your favorite sauce or pasta, or use them as appetizers.</li>
+    <li>Bison meat is <i>lean</i>, so be careful not to overcook them to prevent them from becoming dry.</li>
+    <li>Serve the bison meatballs with your favorite sauce or pasta, or use them as <s>a sacrifice to the gods</s> appetizers.</li>
   </o1>
   <br>
 
