--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
   
   <image src="./images/shocked-bison.jpg" width="500px" height="400px">
   
-</body>
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
   
   <p>
@@ -94,11 +93,12 @@
 <p></p>
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
 <image src="./images/bison_meat.jpg">
-  
+<p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
+<p></p>
   <br>
   <h2>Instructions:</h2>
   <o1>
-    <li>Preheat your oven to 375°F (190°C) and line a baking sheet with parchment paper.</li>
+    <li>Preheat your oven to <s>190°C</s> 375°F and line a baking sheet with parchment paper.</li>
     <li>In a large mixing bowl, combine the ground bison meat, breadcrumbs, grated Parmesan cheese, chopped onion, minced garlic, milk, egg, 
         salt, black pepper, dried oregano, dried basil, and red pepper flakes (if using).</li> 
     <li>Mix everything together until well combined.</li>
@@ -107,8 +107,8 @@
     <li>Place the meatballs in the hot skillet, making sure not to overcrowd them. You may need to cook them in batches if your pan is <s>inadequate</s> not large enough.</li>
     <li>Brown the meatballs on all sides, turning them as needed. <b>This should take about 4-5 minutes.</b></li>
     <li>Once the meatballs are <i>nicely</i> browned, transfer them to the prepared baking sheet.</li>
-    <li>Bake the meatballs in the preheated oven for about 10-15 minutes or until they are cooked through.</li>
-    <li>Bison meat is <i>lean</i>, so be careful not to overcook them to prevent them from becoming dry.</li>
+    <li>Bake the meatballs in the preheated oven for about 10-15 minutes <b>or</b> until they are cooked through.</li>
+    <li>Bison meat is <i>lean</i>, so be careful <i>not</i> to overcook them to prevent them from becoming dry.</li>
     <li>Serve the bison meatballs with your favorite sauce or pasta, or use them as <s>a sacrifice to the gods</s> appetizers.</li>
   </o1>
   <br>
@@ -118,5 +118,6 @@
 <em><a href="https://www.food.com/recipe/bison-meat-loaf-1-buffalo-355879">If you're more of a meatloaf person, try this!</a></em>
 
 <p></p>
-  
+
+</body>
 </html>
