--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
   <h1>How to make the best Bison Meatballs of all time!</h1>
 
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
-  
-  <image src="./images/shocked-bison.jpg" width="500px" height="400px">
+  <figure>
+    <image src="./images/shocked-bison.jpg" width="500px" height="400px">
+    <figcaption>Don't too attached to this guy, he's about to be dinner.</figcaption>
+  </figure>
   
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
   
@@ -92,7 +94,11 @@
   </u1>
 <p></p>
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
-<image src="./images/bison_meat.jpg">
+  <figure>
+    <image src="./images/bison_meat.jpg">
+  <figcaption>Here's Greg. Are you happy with yourself for giving him a name and a backstory?</figcaption>
+  </figure>
+                                                                                            
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
 <p></p>
   <br>
