--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
   <figure>
     <image src="./images/shocked-bison.jpg" width="500px" height="400px">
-    <figcaption>Don't too attached to this guy, he's about to be dinner.</figcaption>
+    <figcaption><i>Don't too attached to this guy, he's about to be dinner.<\i></figcaption>
   </figure>
   
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
@@ -96,7 +96,7 @@
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
   <figure>
     <image src="./images/bison_meat.jpg">
-  <figcaption>Here's Greg. Are you happy with yourself for giving him a name and a backstory?</figcaption>
+  <figcaption><i>Here's Greg. Are you happy with yourself for giving him a name and a backstory?</i></figcaption>
   </figure>
                                                                                             
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
