--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
   <figure>
     <image src="./images/shocked-bison.jpg" width="500px" height="400px">
-    <figcaption><i>Don't too attached to this guy, he's about to be dinner.<\i></figcaption>
+    <figcaption><i>Don't too attached to this guy, he's about to be dinner.</i></figcaption>
   </figure>
   
 <p>______________________________________________________________________________________________________________________________________________________________________________________________</p>
